# RP2040_Audio

./: README.md
Firmware/: CMakeLists.txt  README.md  adc.c  adc.h  audio.c  audio.h  button.c  button.h  circbuf.c  circbuf.h  config.txt  dblfilter.h  debounce.c  debounce.h  dsp_lib.c  dsp_lib.h  fx.c  fx.h  fx_cdl.c  fx_cdl.h  fx_vca.c  fx_vca.h  gfx.c  gfx.h  i2s_fulldup.c  i2s_fulldup.h  i2s_fulldup.pio  main.c  main.h  menu.c  menu.h  nvs.c  nvs.h  splash.h  st7735.c  st7735.h  widgets.c  widgets.h  wm8731.c  wm8731.h
Firmware/splash/: png2rgb565.sh
Hardware/: Euro.kicad_sch  rp2040_audio-cache.lib  rp2040_audio.kicad_pcb  rp2040_audio.kicad_prl  rp2040_audio.kicad_pro  rp2040_audio.kicad_sch  rp2040_audio_bom.ods
Hardware/audio_panel/: audio_panel-cache.lib  audio_panel.kicad_pcb  audio_panel.kicad_prl  audio_panel.kicad_pro  audio_panel.kicad_sch
